--- a/ThueXeVn/ThueXeVn/Views/Home/XeTaxiNoiBai.cshtml
+++ b/ThueXeVn/ThueXeVn/Views/Home/XeTaxiNoiBai.cshtml
@@ -14,9 +14,9 @@
 }
 
 @{
-    ViewBag.title = "Taxi Nội Bài Giá Rẻ, Taxi Sân Bay Giá Rẻ, Taxi Nội Bài Hà Nội Uy Tín";
+    ViewBag.title = "Taxi Noi Bai Airport Service";
     Layout = "~/Views/Shared/_LayoutContent.cshtml";
-    ViewBag.des = "Xe taxi nội bài";
+    ViewBag.des = "Taxi Noi Bai Airport Service, Ha Noi rental car with long and short term";
     ViewBag.keywords = "";
     ViewBag.url = @url;
     ViewBag.image = host + "/Images/taxi-noibai-gia-re-taxi-san-bay-giare-taxi-noibai-hannoi-uy-tin1.jpg";
@@ -25,47 +25,76 @@
 <div class="row" id="taxinoibai" style="background: #fff; color: #333;">
 
     <div class="col-md-9" style="border-right: 1px solid #e7e7e7;">
-        <h1 style="color: #333; text-transform: none;">Taxi Nội Bài Giá Rẻ, Taxi Sân Bay Giá Rẻ, Taxi Nội Bài Hà Nội Uy Tín</h1>
+        <h1 style="color: #333; text-transform: none;">Taxi Noi Bai Airport Service</h1>
         <div style="text-align: justify;">
             <p>
-                Quý khách cần di chuyển tới Nội Bài hay từ Nội Bài về nhà, hãy gọi cho chúng tôi.
-                Công ty vận tải hành khách tại Hà Nội cung cấp <strong>dịch vụ taxi Nội Bài giá rẻ</strong>,
-                <strong>Taxi sân bay giá rẻ</strong>, chất lượng cao, đảm bảo an toàn cho hành khách trong quá trình di chuyển.
-                Hãy gọi cho chúng tôi, ngay khi Quý khách có nhu cầu để tận hưởng những cảm giác tuyệt vời nhất
-                trong hành trình di chuyển của mình do công ty chúng tôi cung cấp.
+                Noi Bai Airport is the largest airport in Vietnam in term of total capacity. It is the main airport serving Hanoi. The airport is located in Phu Minh commune in Soc Son District, about 35 kilometres northeast of downtown Ha Noi. The airport iss also close to some satellite cities of Ha Noi such as Vinh Yen, Bac Ninh, Thai Nguyen…The travel time from the city center is 30-45 minutes
+                We provide Hanoi Airport Taxi Service at the website: thuexevn.com
             </p>
             <p style="text-align: center;">
                 <img class="img-responsive img-c2" src="~/Images/taxi-noibai-gia-re-taxi-san-bay-giare-taxi-noibai-hannoi-uy-tin1.jpg">
             </p>
             <h3 class="color_green">
-                Cam kết chất lượng Taxi sân bay Nội Bài uy tín số 1 tại Việt Nam
+                How to book the car from Ha Noi Airport                
             </h3>
-            <h4 class="color_green">Dịch vụ taxi Hà Nội Nội Bài tiện lợi, nhanh chóng</h4>
-
             <p>
-                Quý khách thường mất hàng giờ đồng hồ ngồi đợi taxi đi qua ngoài đường để gọi vào. Tuy nhiên, có những ngày, dù đã tiêu tốn bao nhiêu thời gian ngồi đợi nhưng Quý khách vẫn chưa thấy bóng dáng một chiếc xe bus Nội Bài nào đi qua, nhất là vào những ngày trời mưa bão. Điều này mang lại cho Quý khách không ít phiền phức. Chúng tôi nhận thấy và thấu hiểu được tâm lý của hành khách khi ngồi đợi xe. <strong>Taxi đi Nội Bài</strong> tại Thuexevn.com sẽ giúp Quý khách đáp ứng tất cả điều ấy.
+                <ul>
+                    <li>Email: thuexevn.com@gmail.com </li>
+                    <li>Hotline: (+84) 093 912 6888</li>
+                    <li>Website: thuexevn.com </li>
+                    <li>Application: Thue xe </li>
+                </ul>
+            </p>
+            <h3 class="color_green">
+                Some advantages of hiring Taxi Noi Bai Airport
+            </h3>
+            <p>
+                <ul>
+                    <li>
+                        Save your time and enjoy your free transfer service
+                    </li>
+                    <li>
+                        Don’t waste time waiting in long taxi queues
+                    </li>
+                    <li>
+                        Our well-train drivers is courteous, friendly and safety
+                    </li>
+                    <li>	
+                        We have all of type of fleet cars,vans for hiring in Viet Nam from 4 seats to 45 seats
+                    </li>
+                </ul>
+            </p>
+            <h4 class="color_green">Service taxi Ha Noi - Noi Bai comfortable, quickly</h4>
+            <p><b>Notes:</b></p>
+            <p>
+                When you arrive at the airport, our English speaking and good staff will meet and great you at the exit of Noi Bai Airport by holding the your name or signboard
             </p>
             <p>
-                Quý khách không phải mất thời gian chờ xe như trước. Thay vào đó, chỉ cần đặt xe Nội Bài trược tuyến tại đây, hoặc gọi trực tiếp cho đường dây nóng tổng đài taxi Nội Bài trên website. Nhân viên sẽ điều xe đến địa chỉ Quý khách cung cấp trong vòng 10 phút. Điều đó giúp Quý khách tiết kiệm được thời gian.
+                When the booking is confirmed, our driver will be waiting for you at the exit terminal gate. If you do not see our driver, you should call to hotline: 096 410 8688 to deal with it
             </p>
-
+            <p>
+                Taxi fare is charged according to taxi meter. Taxi ride to city center takes 30 minutes. Our price for Taxi Noi Bai Airport Service about 25 USD/ trip ( 350.000 VND/ trip) (price includes parking fee, allowances for driver, fuel, fixed price without hideen cost)
+            </p>
             <h4 class="color_green">
-                Hành trình xe Nội Bài an toàn, dịch vụ Nội Bài taxi chất lượng
+                Other services in hiring a car
             </h4>
-            <h5 class="color_green"><i>Tiết kiệm tối đa thời gian và chi phí của khách hàng</i></h5>
+            <h5 class="color_green"><i>Optimize time and fee for customer</i></h5>
 
-            <p>Quý khách sẽ không khỏi bất ngờ với mức giá công ty đưa ra. So với các đơn vị vận chuyển hành khách khác, Quý khách sẽ tiết kiệm được chi phí khi lựa chọn công ty chúng tôi.</p>
-            <p>Nếu tính ra, so với việc quý khách sử dụng xe bus đi Nội Bài (Xe buýt Nội Bài) hay các phương tiện vận tải khác thì đây là sự lựa chọn hoàn toàn thông thái.</p>
+            <p>We offer car rental services: Ha Noi rental car with long and short term.</p>
+            <p>Wedding, anniversary, trip, picnic services
+            Providing monthly year, and long term car rental service
+            Please call us to recive the best price for renting a car. It is our pleasure to serve our guests.
+            .</p>
 
             <div class="table-responsive">
                 <table class="table table-bordered" id="table_baogia" style="margin-top: 15px;">
-                    <caption>BẢNG BÁO GIÁ XE</caption>
+                    <caption>PRICING TABLE</caption>
                     <thead>
                         <tr style="text-align: center;">
-                            <th rowspan="3" colspan="5" style="width: 400px;">Loại xe (số chỗ)</th>
-                            <th rowspan="3" colspan="2">Hà Nội - Nội Bài</th>
-                            <th rowspan="3" colspan="2">Nội Bài - Hà Nội</th>
-                            <th rowspan="3" colspan="2">Khứ hồi Nội Bài</th>                            
+                            <th rowspan="3" colspan="5" style="width: 400px;">Car type (Seats)</th>
+                            <th rowspan="3" colspan="2">Ha Noi - Noi Bai Airport</th>
+                            <th rowspan="3" colspan="2">Noi Bai Airport - Ha Noi</th>
+                            <th rowspan="3" colspan="2">Book Return Nội Bài Airport</th>                            
                         </tr>
                         <tr style="text-align: center;">                            
                         </tr>
@@ -74,21 +103,21 @@
 
                     <tbody>
                         <tr>
-                            <td class="bg_fw1" colspan="5">Xe 4 chỗ (Toyota Vios)</td>
+                            <td class="bg_fw1" colspan="5">Car 4 seats (Toyota Vios)</td>
                             
                             <td colspan="2">
-                                200,000
+                                200,000 vnd
                             </td>
                             <td colspan="2">
-                                300,000
+                                300,000 vnd
                             </td>
                             <td colspan="2">
-                                480,000
+                                480,000 vnd
                             </td>
                             
                         </tr>
                         <tr>
-                            <td class="bg_fw1" colspan="5">Xe 7 chỗ (Toyota Vios)</td>
+                            <td class="bg_fw1" colspan="5">Car 7 seats (Toyota Vios)</td>
                             
                             <td colspan="2">
                                 220,000
@@ -102,7 +131,7 @@
                             
                         </tr>
                         <tr>
-                            <td class="bg_fw1" colspan="5">Xe 16 chỗ (Toyota Vios)</td>
+                            <td class="bg_fw1" colspan="5">Car 16 seats (Toyota Vios)</td>
                             
                             <td colspan="2">350,000</td>
                             <td colspan="2">450,000</td>
@@ -110,7 +139,7 @@
                             
                         </tr>
                         <tr>
-                            <td class="bg_fw1" colspan="5">Xe 29 chỗ (Huyndai County)</td>
+                            <td class="bg_fw1" colspan="5">Car 29 seats (Huyndai County)</td>
                             
                             <td colspan="2">900,000</td>
                             <td colspan="2">900,000</td>
@@ -127,14 +156,14 @@
 
                                 <ul style="list-style-type: none; padding-left: 0; font-weight: 600;">
                                     <li>
-                                        <b>Riêng với tuyến xe sân bay:</b>
+                                        <b>For go to Airport:</b>
                                         <ul style="list-style-type: none; padding-left: 5px;">
                                             <li>
                                                 <p>
-                                                    - Nếu điểm đi hoặc điểm đến là 4 quận nội thành(Ba Đình, Đống Đa, Hoàn Kiếm, Cầu Giấy): 200.000 (Chiều đi) - 300.000 (chiều về) còn các quận nội thành khác: 250.000 (chiều đi) – 350.000 (chiều về).
+                                                    - If from pick up location and to return location are in 4 district(Ba Đình, Đống Đa, Hoàn Kiếm, Cầu Giấy): 200.000 (forward) - 300.000 (back) and other district: 250.000 (forward) – 350.000 (back).
                                                 </p>
                                             </li>
-                                            <li><p>- Nếu quãng đường > 40km (Chương Mỹ, Quốc Oai,…): tính giá tiền theo Km</p></li>
+                                            <li><p>- If distance of trip > 40kms (Chương Mỹ, Quốc Oai,…): fee are caculated by = distance * price per km</p></li>
 
                                         </ul>
                                     </li>
@@ -149,24 +178,8 @@
                     </tfoot>
 
                 </table>
-                <div><p style="font-weight: 600;">Lưu ý: Toàn bộ giá trên chưa bao gồm VAT và phí cầu đường.</p></div>
+                <div><p style="font-weight: 600;">Note that: All pricing are not include <span style="background: #26AAEA; padding: 5px; color: #fff;">ticket on the road(toll,..)</span> and  <span style="background: #26AAEA; padding: 5px;color: #fff;">VAT tax</span>.</p></div>
             </div>
-
-            <p style="text-align: center;">
-                <i>Bảng giá cước Taxi Nội Bài Hà Nội giá rẻ</i>
-            </p>
-
-            <h3 class="color_green">Phục vụ chu đáo, đến tận nơi, đón tại chỗ</h3>
-            <p>
-                Công ty chúng tôi phục vụ hành khách 24/7. Bất kể khi nào Quý khách cần hãy nhấc máy lên và gọi hotline số taxi Hà Nội Nội Bài tại Thuexevn.com.
-                Bất kể ngày lễ tết nào, khi muốn di chuyển, nhân viên dịch vụ <strong>Taxi Nội Bài giá</strong> rẻ sẵn sàng đón tiếp Quý khách.
-            </p>
-            <p style="text-align: center;">
-                <img class="img-responsive img-c2" src="~/Images/taxi-noibai-gia-re-taxi-san-bay-giare-taxi-noibai-hannoi-uy-tin2.jpg">
-            </p>
-            <h3 class="color_green">Thái độ lịch sự, lễ phép</h3>
-            <p>Trước khi trở thành nhân viên chính thức của công ty, họ phải trải qua quá trình kiểm tra và đào tạo hết sức gay gắt. Nếu đáp ứng được về trình độ tay nghề và phẩm chất đạo đức, chúng tôi tiến hành nhận. Tuy nhiên trong thời gian làm việc, bất cứ nhân viên nào có hành vi sai phạm quy định, ảnh hưởng tới uy tín công ty chúng tôi tiến hành đào thải. Do đó, khách hàng có thể yên tâm khi lựa chọn Taxi sân bay Nội Bài giá rẻ tại đây.</p>
-            <p>Thái độ lễ phép, đi đứng nhẹ nhàng, tiếp đón khách hàng chu đáo từ đội ngũ nhân viên sẽ không bao giờ làm Quý khách thất vọng. hãy đăng ký ngay đi taxi Nội Bài Hà Nội giá rẻ, để trải nghiệm hành trình đầy thú vị Quý khách nhé.</p>
 
         </div>
     </div>
@@ -174,7 +187,7 @@
     <div class="col-md-3">
         <!-- Widget: Categories -->
         <div class="widget" style="padding: 0;">
-            <h3>TIN KHÁC</h3>
+            <h3>Other News</h3>
             @Html.Raw(ViewBag.menuleft)
         </div>
     </div>
